perf(backend): create a responsive fullscreen

--- a/app/game.vcxproj
+++ b/app/game.vcxproj
@@ -137,6 +137,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Menu.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Menu.h" />
     <ClCompile Include="src\GameManager.cpp" />
   </ItemGroup>
   <ItemGroup>
