feat(backend): create map

--- a/app/game.vcxproj
+++ b/app/game.vcxproj
@@ -137,9 +137,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\MapManager.cpp" />
     <ClCompile Include="src\Menu.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\MapManager.hpp" />
     <ClInclude Include="include\Menu.hpp" />
     <ClInclude Include="include\reasings.hpp" />
     <ClCompile Include="src\GameManager.cpp" />
