--- a/app/game.vcxproj
+++ b/app/game.vcxproj
@@ -137,6 +137,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\CaptchaSolver.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\GetRich.cpp" />
     <ClCompile Include="src\MapManager.cpp" />
@@ -144,6 +145,7 @@
     <ClCompile Include="src\SeaMinigame.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\CaptchaSolver.hpp" />
     <ClInclude Include="include\Game.hpp" />
     <ClInclude Include="include\MapManager.hpp" />
     <ClInclude Include="include\Menu.hpp" />
