--- a/app/game.vcxproj.filters
+++ b/app/game.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\GetRich.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\CaptchaSolver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Menu.hpp">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Game.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CaptchaSolver.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
