refactor(backend): optimize mail packager's code base

--- a/app/game.vcxproj.filters
+++ b/app/game.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\CaptchaSolver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\MailPackager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Menu.hpp">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\CaptchaSolver.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\MailPackager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
