--- a/app/game.vcxproj.filters
+++ b/app/game.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="src\MailPackager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\PollutedStreet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Menu.hpp">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\MailPackager.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\PollutedStreet.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
