--- a/app/game.vcxproj.filters
+++ b/app/game.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="src\PollutedStreet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Hangman.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Menu.hpp">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\PollutedStreet.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Hangman.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
