--- a/app/game.vcxproj.filters
+++ b/app/game.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="include\Hangman.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\GetRich.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\GameManager.hpp">
